chore: handle debug api event for v4